--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   api:
+    image: devintyler2626/tesalate-api:latest
     container_name: api-prod
     env_file:
       - .env.prod
