--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,11 +56,10 @@ services:
     env_file:
       - .env
     volumes:
-      - ../mongo/$BUILD_ENVIRONMENT/data/mongo-0:/data/db
+      - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-0:/data/db
       - ../mongo/scripts/create-user.sh:/docker-entrypoint-initdb.d/create-user.sh
-      - ../mongo/$BUILD_ENVIRONMENT/keyfile/file.key:/auth/file.key
+      - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
     healthcheck:
-      # test: test $$(echo "rs.status().ok" | mongosh -u $${MONGO_INITDB_ROOT_USERNAME} -p $${MONGO_INITDB_ROOT_PASSWORD} --quiet) -eq 1
       test: echo 'db.runCommand("ping").ok' | mongo mongo-0:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT} --quiet
       interval: 10s
       start_period: 30s
@@ -79,8 +78,8 @@ services:
     networks:
       - main-network
     volumes:
-      - ../mongo/$BUILD_ENVIRONMENT/data/mongo-1:/data/db
-      - ../mongo/$BUILD_ENVIRONMENT/keyfile/file.key:/auth/file.key
+      - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-1:/data/db
+      - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
 
   mongo-2:
@@ -92,8 +91,8 @@ services:
     networks:
       - main-network
     volumes:
-        - ../mongo/$BUILD_ENVIRONMENT/data/mongo-2/:/data/db
-        - ../mongo/$BUILD_ENVIRONMENT/keyfile/file.key:/auth/file.key
+        - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-2/:/data/db
+        - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
 
   mongoclient:
@@ -109,7 +108,7 @@ services:
       - .env
     volumes:
       - ../mongo/scripts/init-replica.sh:/deployment_scripts/init-replica.sh
-      - ../mongo/$BUILD_ENVIRONMENT/mongostatus:/data/
+      - ../mongo/${BUILD_ENVIRONMENT:-local}/mongostatus:/data/
     entrypoint:
       - /deployment_scripts/init-replica.sh
 
@@ -123,7 +122,6 @@ services:
       ME_CONFIG_MONGODB_AUTH_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
       ME_CONFIG_MONGODB_AUTH_DATABASE: 'admin'
-
     ports:
       - "8081:8081"
     networks:
