--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,9 @@ services:
     env_file:
       - .env
     volumes:
-      - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-0:/data/db
+      - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-0:/data/db
       - ../mongo/scripts/create-user.sh:/docker-entrypoint-initdb.d/create-user.sh
-      - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
+      - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongo mongo-0:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT} --quiet
       interval: 10s
@@ -78,8 +78,8 @@ services:
     networks:
       - main-network
     volumes:
-      - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-1:/data/db
-      - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
+      - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-1:/data/db
+      - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
 
   mongo-2:
@@ -91,8 +91,8 @@ services:
     networks:
       - main-network
     volumes:
-        - ../mongo/${BUILD_ENVIRONMENT:-local}/data/mongo-2/:/data/db
-        - ../mongo/${BUILD_ENVIRONMENT:-local}/keyfile/file.key:/auth/file.key
+        - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-2/:/data/db
+        - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
 
   mongoclient:
@@ -108,7 +108,7 @@ services:
       - .env
     volumes:
       - ../mongo/scripts/init-replica.sh:/deployment_scripts/init-replica.sh
-      - ../mongo/${BUILD_ENVIRONMENT:-local}/mongostatus:/data/
+      - ../mongo/${BUILD_ENVIRONMENT}/mongostatus:/data/
     entrypoint:
       - /deployment_scripts/init-replica.sh
 
