--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       test: curl --fail http://api:${API_PORT} || exit 1 
       interval: 10s
       start_period: 30s  
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:${MONGO_PORT:-27017} -- yarn dev -L"]
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn dev -L"]
 
   data-collector:
     build:
@@ -41,14 +41,14 @@ services:
       - mongo-0
     networks:
       - main-network
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:${MONGO_PORT:-27017} -- yarn dev -L"]
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn dev -L"]
 
   mongo-0:
     hostname: 'mongodb'
     container_name: 'mongo-0'
     image: 'mongo:5.0.3'
     ports:
-      - ${MONGO_PORT:-27017}:27017
+      - ${MONGO_HOST_PORT:-27017}:27017
     networks:
       - main-network
     environment:
@@ -60,7 +60,7 @@ services:
       - ../mongo/scripts/create-user.sh:/docker-entrypoint-initdb.d/create-user.sh
       - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongo mongo-0:${MONGO_PORT:-27017}/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT} --quiet
+      test: echo 'db.runCommand("ping").ok' | mongo mongo-0:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT} --quiet
       interval: 10s
       start_period: 30s
     restart: always
@@ -113,7 +113,7 @@ services:
     container_name: mongo-express
     restart: unless-stopped
     environment:
-      ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo-0,mongo-1,mongo-2:${MONGO_PORT:-27017}/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}?replicaSet=${MONGO_REPLICA_SET_NAME}&readPreference=primaryPreferred&authSource=admin"
+      ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo-0,mongo-1,mongo-2:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}?replicaSet=${MONGO_REPLICA_SET_NAME}&readPreference=primaryPreferred&authSource=admin"
       ME_CONFIG_MONGODB_AUTH_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       ME_CONFIG_MONGODB_AUTH_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
