--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: '3.9'
 
 services:
+  ui:
+    container_name: ui
+    image: devintyler2626/tesalate-ui:latest
+    ports:
+      - '80:80'
+
   api:
     container_name: api
     image: devintyler2626/tesalate-api:latest
-    ports:
-      - '${API_PORT}:4400'
     depends_on:
       - mongo-0
     links:
@@ -19,6 +23,8 @@ services:
       test: curl --fail http://api:${API_PORT} || exit 1 
       interval: 10s
       start_period: 30s  
+    ports:
+      - '${API_PORT}:${API_PORT}'
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
 
   data-collector:
@@ -105,10 +111,12 @@ services:
     restart: unless-stopped
     environment:
       ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo-0,mongo-1,mongo-2:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}?replicaSet=${MONGO_REPLICA_SET_NAME}&readPreference=primaryPreferred&authSource=admin"
-      ME_CONFIG_MONGODB_AUTH_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: true
       ME_CONFIG_MONGODB_AUTH_DATABASE: 'admin'
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_INITDB_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_INITDB_PASSWORD}
     ports:
       - "8081:8081"
     networks:
