--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   ui:
     container_name: ui
     image: devintyler2626/tesalate-ui:latest
+    depends_on:
+      - api
     ports:
       - '80:80'
 
@@ -12,15 +14,17 @@ services:
     image: devintyler2626/tesalate-api:latest
     depends_on:
       - mongo-0
+      - mongo-1
+      - mongo-2
     links:
       - mongo-0
     networks:
       - main-network
-    restart: always
+    restart: unless-stopped
     env_file:
       - .env
     healthcheck:
-      test: curl --fail http://api:${API_PORT} || exit 1 
+      test: wget --no-verbose --tries=1 --spider http://api:4400/health || exit 1 
       interval: 10s
       start_period: 30s  
     ports:
@@ -30,10 +34,13 @@ services:
   data-collector:
     container_name: data-collector
     image: devintyler2626/tesalate-data-collector:latest
+    restart: always
     env_file:
       - .env
     depends_on:
       - mongo-0
+      - mongo-1
+      - mongo-2
     links:
       - mongo-0
     networks:
