--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
   api:
     container_name: api
     image: devintyler2626/tesalate-api:latest
+    extra_hosts:
+      - "mongo-0:${MONGO_HOST}"
+      - "mongo-1:${MONGO_HOST}"
+      - "mongo-2:${MONGO_HOST}"
     # depends_on:
     #   - mongo-0
     #   - mongo-1
@@ -38,6 +42,10 @@ services:
     restart: always
     env_file:
       - .env
+    extra_hosts:
+      - "mongo-0:${MONGO_HOST}"
+      - "mongo-1:${MONGO_HOST}"
+      - "mongo-2:${MONGO_HOST}"
     # depends_on:
     #   - mongo-0
     #   - mongo-1
