--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
   ui:
     container_name: ui
     image: devintyler2626/tesalate-ui:latest
+    restart: always
     depends_on:
       - api
     ports:
-      - '${UI_PORT:-8080}:80'
+      - '${UI_PORT:-80}:80'
 
   api:
     container_name: api
@@ -16,15 +17,17 @@ services:
       - "mongo-0:${MONGO_HOST}"
       - "mongo-1:${MONGO_HOST}"
       - "mongo-2:${MONGO_HOST}"
-    # depends_on:
-    #   - mongo-0
-    #   - mongo-1
-    #   - mongo-2
-    # links:
-    #   - mongo-0
-    # networks:
-    #   - main-network
-    restart: unless-stopped
+    volumes:
+      - $PWD/${BUILD_ENVIRONMENT}/api/logs:/home/node/app/logs
+    depends_on:
+      - mongo-0
+      - mongo-1
+      - mongo-2
+    links:
+      - mongo-0
+    networks:
+      - main-network
+    restart: always
     env_file:
       - .env
     healthcheck:
@@ -33,8 +36,7 @@ services:
       start_period: 30s  
     ports:
       - '${API_PORT}:${API_PORT}'
-    # command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
-    command: "yarn start" 
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
 
   data-collector:
     container_name: data-collector
@@ -46,16 +48,17 @@ services:
       - "mongo-0:${MONGO_HOST}"
       - "mongo-1:${MONGO_HOST}"
       - "mongo-2:${MONGO_HOST}"
-    # depends_on:
-    #   - mongo-0
-    #   - mongo-1
-    #   - mongo-2
-    # links:
-    #   - mongo-0
-    # networks:
-    #   - main-network
-    # command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
-    command: "yarn start"
+    volumes:
+      - $PWD/${BUILD_ENVIRONMENT}/data-collector/logs:/home/node/app/logs
+    depends_on:
+      - mongo-0
+      - mongo-1
+      - mongo-2
+    links:
+      - mongo-0
+    networks:
+      - main-network
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
 
   mongo-0:
     hostname: 'mongodb'
@@ -63,8 +66,8 @@ services:
     image: 'mongo:5.0.3'
     ports:
       - ${MONGO_HOST_PORT:-27017}:27017
-    # networks:
-    #   - main-network
+    networks:
+      - main-network
     environment:
       - MONGO_INITDB_DATABASE=${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}
     env_file:
@@ -87,8 +90,9 @@ services:
     hostname: 'mongodb'
     container_name: 'mongo-1'
     image: 'mongo:5.0.3'
-    # networks:
-    #   - main-network
+    networks:
+      - main-network
+    restart: always
     volumes:
       - $PWD/${BUILD_ENVIRONMENT}/data/mongo-1:/data/db
       - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
@@ -98,8 +102,9 @@ services:
     hostname: 'mongodb'
     container_name: 'mongo-2'
     image: 'mongo:5.0.3'
-    # networks:
-    #   - main-network
+    networks:
+      - main-network
+    restart: always
     volumes:
       - $PWD/${BUILD_ENVIRONMENT}/data/mongo-2:/data/db
       - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
@@ -108,12 +113,13 @@ services:
   mongo-client:
     image: mongo:5.0.3
     container_name: 'mongo-client'
-    # networks:
-    #   - main-network
-    # depends_on:
-    #   - mongo-0
-    #   - mongo-1
-    #   - mongo-2
+    restart: always
+    networks:
+      - main-network
+    depends_on:
+      - mongo-0
+      - mongo-1
+      - mongo-2
     env_file:
       - .env
     volumes:
@@ -125,7 +131,7 @@ services:
   mongo-express:
     image: mongo-express:latest
     container_name: mongo-express
-    restart: unless-stopped
+    restart: always
     environment:
       ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo-0,mongo-1,mongo-2:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}?replicaSet=${MONGO_REPLICA_SET_NAME}&readPreference=primaryPreferred&authSource=admin"
       ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
@@ -136,11 +142,11 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_INITDB_PASSWORD}
     ports:
       - "8081:8081"
-    # networks:
-    #   - main-network
-    # depends_on:
-    #   - mongo-0
+    networks:
+      - main-network
+    depends_on:
+      - mongo-0
       
-# networks:
-#   main-network:
-#     driver: host
+networks:
+  main-network:
+    driver: host
