--- a/old-docker-compose.yml
+++ b/old-docker-compose.yml
@@ -2,24 +2,24 @@ version: '3.9'
 
 services:
   ui:
-    build:
-      context: ../tesalate-ui/
-      dockerfile: Dockerfile
+    container_name: ui
+    image: devintyler2626/tesalate-ui:latest
+    restart: always
+    depends_on:
+      - api
     ports:
-      - '80:80'
+      - '${UI_PORT:-80}:80'
 
   api:
-    build:
-      context: ../tesalate-api/
-      dockerfile: Dockerfile
-    volumes:
-      - ./logs/api:/home/node/app/logs
-      - ../tesalate-api:/home/node/app/
     container_name: api
-    ports:
-      - '${API_PORT}:4400'
+    image: devintyler2626/tesalate-api:latest
+    volumes:
+      - $PWD/${BUILD_ENVIRONMENT}/api/logs:/home/node/app/logs
     depends_on:
       - mongo-0
+      - mongo-1
+      - mongo-2
+      - redis
     links:
       - mongo-0
     networks:
@@ -28,27 +28,30 @@ services:
     env_file:
       - .env
     healthcheck:
-      test: curl --fail http://api:${API_PORT} || exit 1 
+      test: wget --no-verbose --tries=1 --spider http://api:4400/health || exit 1 
       interval: 10s
       start_period: 30s  
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn dev -L"]
+    ports:
+      - '${API_PORT}:${API_PORT}'
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
 
   data-collector:
-    build:
-      context: ../tesalate-data-collector/
-      dockerfile: Dockerfile
-    volumes:
-      - ../tesalate-data-collector/:/home/node/app/
     container_name: data-collector
+    image: devintyler2626/tesalate-data-collector:latest
+    restart: always
     env_file:
       - .env
+    volumes:
+      - $PWD/${BUILD_ENVIRONMENT}/data-collector/logs:/home/node/app/logs
     depends_on:
       - mongo-0
+      - mongo-1
+      - mongo-2
     links:
       - mongo-0
     networks:
       - main-network
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn dev -L"]
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
 
   mongo-0:
     hostname: 'mongodb'
@@ -63,9 +66,9 @@ services:
     env_file:
       - .env
     volumes:
-      - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-0:/data/db
-      - ../mongo/scripts/create-user.sh:/docker-entrypoint-initdb.d/create-user.sh
-      - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
+      - $PWD/${BUILD_ENVIRONMENT}/data/mongo-0:/data/db
+      - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
+      - $PWD/scripts/create-user.sh:/docker-entrypoint-initdb.d/create-user.sh
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongo mongo-0:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT} --quiet
       interval: 10s
@@ -82,9 +85,10 @@ services:
     image: 'mongo:5.0.3'
     networks:
       - main-network
+    restart: always
     volumes:
-      - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-1:/data/db
-      - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
+      - $PWD/${BUILD_ENVIRONMENT}/data/mongo-1:/data/db
+      - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
 
   mongo-2:
@@ -93,12 +97,13 @@ services:
     image: 'mongo:5.0.3'
     networks:
       - main-network
+    restart: always
     volumes:
-      - ../mongo/${BUILD_ENVIRONMENT}/data/mongo-2/:/data/db
-      - ../mongo/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
+      - $PWD/${BUILD_ENVIRONMENT}/data/mongo-2:/data/db
+      - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
     
-  mongoclient:
+  mongo-client:
     image: mongo:5.0.3
     container_name: 'mongo-client'
     networks:
@@ -110,21 +115,23 @@ services:
     env_file:
       - .env
     volumes:
-      - ../mongo/scripts/init-replica.sh:/deployment_scripts/init-replica.sh
-      - ../mongo/${BUILD_ENVIRONMENT}/mongostatus:/data/
+      - $PWD/scripts/init-replica.sh:/deployment_scripts/init-replica.sh
+      - $PWD/${BUILD_ENVIRONMENT}/mongostatus:/data/
     entrypoint:
       - /deployment_scripts/init-replica.sh
 
   mongo-express:
     image: mongo-express:latest
     container_name: mongo-express
-    restart: unless-stopped
+    restart: always
     environment:
       ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo-0,mongo-1,mongo-2:27017/${BASE_MONGO_INITDB_DATABASE}_${BUILD_ENVIRONMENT}?replicaSet=${MONGO_REPLICA_SET_NAME}&readPreference=primaryPreferred&authSource=admin"
-      ME_CONFIG_MONGODB_AUTH_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
       ME_CONFIG_MONGODB_AUTH_DATABASE: 'admin'
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_INITDB_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_INITDB_PASSWORD}
     ports:
       - "8081:8081"
     networks:
@@ -145,6 +152,6 @@ services:
     volumes: 
       - $PWD/${BUILD_ENVIRONMENT}/redis:/data
 
+
 networks:
   main-network:
-    driver: bridge
