--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       start_period: 30s  
     ports:
       - '${API_PORT}:${API_PORT}'
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- yarn start"]
+    command: [ "bash", "-c", "yarn start"]
 
   data-collector:
     container_name: data-collector
