--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,13 @@
-events { worker_connections 1024; }
+events { worker_connections 1024;}
 
 http {
+    upstream backend {
+        server api:4400;
+    }
     server {
         listen 4400;
         location / {
-            proxy_pass http://api:4400;
+            proxy_pass http://backend;
         }
     }
 }
