--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     #   dockerfile: Dockerfile
     image: devintyler2626/tesalate-api:latest
     environment:
-      - NODE_ENV=productionss
+      - NODE_ENV=production
     volumes:
       - $PWD/${BUILD_ENVIRONMENT}/api/logs:/home/node/app/logs
     depends_on:
