--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,7 @@ services:
     #   - '${API_PORT}:${API_PORT}'
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
-  processor:
-    container_name: processor
+  producer:
     # build:
     #   context: ../tesalate-processor/
     #   dockerfile: Dockerfile
@@ -52,8 +51,34 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      - APP_TYPE=producer
     volumes:
-      - $PWD/${BUILD_ENVIRONMENT}/processor/logs:/home/node/app/logs
+      - $PWD/${BUILD_ENVIRONMENT}/producer/logs:/home/node/app/logs
+    depends_on:
+      - mongo-0
+      - mongo-1
+      - mongo-2
+      - redis
+    links:
+      - mongo-0
+      - redis
+    networks:
+      - main-network
+    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
+
+  consumer:
+    # build:
+    #   context: ../tesalate-processor/
+    #   dockerfile: Dockerfile
+    image: devintyler2626/tesalate-processor:latest
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - APP_TYPE=consumer
+    volumes:
+      - $PWD/${BUILD_ENVIRONMENT}/consumer/logs:/home/node/app/logs
     depends_on:
       - mongo-0
       - mongo-1
