--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,12 @@ services:
       test: wget --no-verbose --tries=1 --spider http://api:4400/health || exit 1 
       interval: 10s
       start_period: 30s  
+    deploy:
+      mode: replicated
+      replicas: 2
+      resources:
+        limits:
+          memory: 512MB
     # ports:
     #   - '${API_PORT}:${API_PORT}'
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
@@ -65,6 +71,12 @@ services:
       - redis
     networks:
       - main-network
+    deploy:
+      mode: replicated
+      replicas: 1
+      resources:
+        limits:
+          memory: 512MB
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
   consumer:
@@ -89,6 +101,12 @@ services:
       - redis
     networks:
       - main-network
+    deploy:
+      mode: replicated
+      replicas: 2
+      resources:
+        limits:
+          memory: 256MB
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
   mongo-0:
