--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -213,7 +213,8 @@ services:
       - $PWD/${BUILD_ENVIRONMENT}/redis:/data
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.23
+    restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
