--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -224,7 +224,7 @@ services:
     networks:
       - main-network
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost:4400/health || exit 1 
+      test: curl --fail localhost:4400/health || exit 1 
       interval: 10s
       start_period: 30s
 
