--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     #   - '${API_PORT}:${API_PORT}'
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
-  producer:
+  processor:
     # build:
     #   context: ../tesalate-processor/
     #   dockerfile: Dockerfile
@@ -57,40 +57,10 @@ services:
     restart: always
     env_file:
       - .env
-    environment:
-      - APP_TYPE=producer
+    # environment:
+      # - APP_TYPE=producer
     volumes:
       - $PWD/${BUILD_ENVIRONMENT}/producer/logs:/home/node/app/logs
-    depends_on:
-      - mongo-0
-      - mongo-1
-      - mongo-2
-      - redis
-    links:
-      - mongo-0
-      - redis
-    networks:
-      - main-network
-    deploy:
-      mode: replicated
-      replicas: 1
-      resources:
-        limits:
-          memory: 512MB
-    command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
-
-  consumer:
-    # build:
-    #   context: ../tesalate-processor/
-    #   dockerfile: Dockerfile
-    image: devintyler2626/tesalate-processor:latest
-    restart: always
-    env_file:
-      - .env
-    environment:
-      - APP_TYPE=consumer
-    volumes:
-      - $PWD/${BUILD_ENVIRONMENT}/consumer/logs:/home/node/app/logs
     depends_on:
       - mongo-0
       - mongo-1
@@ -106,8 +76,68 @@ services:
       replicas: 2
       resources:
         limits:
-          memory: 256MB
+          memory: 512MB
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
+
+  # producer:
+  #   # build:
+  #   #   context: ../tesalate-processor/
+  #   #   dockerfile: Dockerfile
+  #   image: devintyler2626/tesalate-processor:latest
+  #   restart: always
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - APP_TYPE=producer
+  #   volumes:
+  #     - $PWD/${BUILD_ENVIRONMENT}/producer/logs:/home/node/app/logs
+  #   depends_on:
+  #     - mongo-0
+  #     - mongo-1
+  #     - mongo-2
+  #     - redis
+  #   links:
+  #     - mongo-0
+  #     - redis
+  #   networks:
+  #     - main-network
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
+  #     resources:
+  #       limits:
+  #         memory: 512MB
+  #   command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
+
+  # consumer:
+  #   # build:
+  #   #   context: ../tesalate-processor/
+  #   #   dockerfile: Dockerfile
+  #   image: devintyler2626/tesalate-processor:latest
+  #   restart: always
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - APP_TYPE=consumer
+  #   volumes:
+  #     - $PWD/${BUILD_ENVIRONMENT}/consumer/logs:/home/node/app/logs
+  #   depends_on:
+  #     - mongo-0
+  #     - mongo-1
+  #     - mongo-2
+  #     - redis
+  #   links:
+  #     - mongo-0
+  #     - redis
+  #   networks:
+  #     - main-network
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 2
+  #     resources:
+  #       limits:
+  #         memory: 256MB
+  #   command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
   mongo-0:
     hostname: 'mongodb'
