--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "inquirer": "^8.2.0",
     "mongodb": "^4.3.1",
     "nanospinner": "^1.0.0"
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.0"
   }
 }
