--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       - '${UI_PORT:-80}:80'
 
   api:
-    build:
-      context: ../tesalate-api/
-      dockerfile: Dockerfile
+    # build:
+    #   context: ../tesalate-api/
+    #   dockerfile: Dockerfile
     image: devintyler2626/tesalate-api:latest
     environment:
       - NODE_ENV=production
@@ -50,9 +50,9 @@ services:
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
   processor:
-    build:
-      context: ../tesalate-processor/
-      dockerfile: Dockerfile
+    # build:
+    #   context: ../tesalate-processor/
+    #   dockerfile: Dockerfile
     image: devintyler2626/tesalate-processor:latest
     restart: always
     env_file:
@@ -79,66 +79,6 @@ services:
           memory: 512MB
     command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
 
-  # producer:
-  #   # build:
-  #   #   context: ../tesalate-processor/
-  #   #   dockerfile: Dockerfile
-  #   image: devintyler2626/tesalate-processor:latest
-  #   restart: always
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     - APP_TYPE=producer
-  #   volumes:
-  #     - $PWD/${BUILD_ENVIRONMENT}/producer/logs:/home/node/app/logs
-  #   depends_on:
-  #     - mongo-0
-  #     - mongo-1
-  #     - mongo-2
-  #     - redis
-  #   links:
-  #     - mongo-0
-  #     - redis
-  #   networks:
-  #     - main-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
-  #     resources:
-  #       limits:
-  #         memory: 512MB
-  #   command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
-
-  # consumer:
-  #   # build:
-  #   #   context: ../tesalate-processor/
-  #   #   dockerfile: Dockerfile
-  #   image: devintyler2626/tesalate-processor:latest
-  #   restart: always
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     - APP_TYPE=consumer
-  #   volumes:
-  #     - $PWD/${BUILD_ENVIRONMENT}/consumer/logs:/home/node/app/logs
-  #   depends_on:
-  #     - mongo-0
-  #     - mongo-1
-  #     - mongo-2
-  #     - redis
-  #   links:
-  #     - mongo-0
-  #     - redis
-  #   networks:
-  #     - main-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 2
-  #     resources:
-  #       limits:
-  #         memory: 256MB
-  #   command: [ "bash", "-c", "./wait-for-it.sh mongo-0:27017 -- ./wait-for-it.sh redis:6379 -- yarn start"]
-
   mongo-0:
     hostname: 'mongodb'
     container_name: 'mongo-0'
@@ -164,6 +104,10 @@ services:
       - mongo-1
       - mongo-2
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
+    deploy:
+      resources:
+        limits:
+          memory: 2Gi
 
   mongo-1:
     hostname: 'mongodb'
@@ -176,7 +120,11 @@ services:
       - $PWD/${BUILD_ENVIRONMENT}/data/mongo-1:/data/db
       - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
-
+    deploy:
+      resources:
+        limits:
+          memory: 2Gi
+          
   mongo-2:
     hostname: 'mongodb'
     container_name: 'mongo-2'
@@ -188,7 +136,11 @@ services:
       - $PWD/${BUILD_ENVIRONMENT}/data/mongo-2:/data/db
       - $PWD/${BUILD_ENVIRONMENT}/keyfile/file.key:/auth/file.key
     command: ["--replSet", "${MONGO_REPLICA_SET_NAME}", "--bind_ip_all",  "--keyFile", "/auth/file.key"]
-    
+    deploy:
+      resources:
+        limits:
+          memory: 2Gi
+              
   mongo-client:
     image: mongo:4.4
     container_name: 'mongo-client'
